Align feign timeout and retry settings with circuit breaker configuration